force-app/main/default/objects/Occupation__c/fields/AlternativeCount__c.field-meta.xml
<CustomField>
    <fullName>AlternativeCount__c</fullName>
    <label>AlternativeCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>