force-app/main/default/objects/Occupation__c/fields/ConcatinateAltOccFemaleArabic__c.field-meta.xml
<CustomField>
    <fullName>ConcatinateAltOccFemaleArabic__c</fullName>
    <label>שרשור עיסוקים אלט&apos; לשון נקבה בערבית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>