force-app/main/default/objects/Occupation__c/fields/ConcatinateAltOccMale__c.field-meta.xml
<CustomField>
    <fullName>ConcatinateAltOccMale__c</fullName>
    <label>שרשור עיסוקים אלט&apos; לשון זכר</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>