force-app/main/default/objects/Occupation__c/fields/ConcatinateAltOccMaleArabic__c.field-meta.xml
<CustomField>
    <fullName>ConcatinateAltOccMaleArabic__c</fullName>
    <label>שרשור עיסוקים אלט&apos; לשון זכר בערבית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>