force-app/main/default/objects/Occupation__c/fields/ConcatinateAltOccRussianMaleName__c.field-meta.xml
<CustomField>
    <fullName>ConcatinateAltOccRussianMaleName__c</fullName>
    <label>ידוע כזכר רוסית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>