force-app/main/default/objects/Occupation__c/fields/DescriptionOrigin__c.field-meta.xml
<CustomField>
    <fullName>DescriptionOrigin__c</fullName>
    <label>מקור התיאור</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESCO</fullName>
            </value>
            <value>
                <fullName>ISCO</fullName>
            </value>
            <value>
                <fullName>ONET</fullName>
            </value>
            <value>
                <fullName>Avodata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>