force-app/main/default/objects/Occupation__c/fields/IsAlternativeOccupation__c.field-meta.xml
<CustomField>
    <fullName>IsAlternativeOccupation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>האם העיסוק אלטרנטיבי?</label>
    <type>Checkbox</type>
</CustomField>