force-app/main/default/objects/Occupation__c/fields/LicenseProviderDetails__c.field-meta.xml
<CustomField>
    <fullName>LicenseProviderDetails__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לספק רישוי</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Branch__c.IsLicenseProvider__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Branch__c</referenceTo>
    <relationshipLabel>עיסוקים</relationshipLabel>
    <relationshipName>Occupations</relationshipName>
    <type>Lookup</type>
</CustomField>