force-app/main/default/objects/Occupation__c/fields/LicenseProviderEnglish__c.field-meta.xml
<CustomField>
    <fullName>LicenseProviderEnglish__c</fullName>
    <label>ספק רישוי אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>