force-app/main/default/objects/Occupation__c/fields/LicenseProviderUrlArabic__c.field-meta.xml
<CustomField>
    <fullName>LicenseProviderUrlArabic__c</fullName>
    <label>קישור למידע רישוי ערבית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>