force-app/main/default/objects/Occupation__c/fields/LicenseProviderUrlEnglish__c.field-meta.xml
<CustomField>
    <fullName>LicenseProviderUrlEnglish__c</fullName>
    <label>קישור למידע רישוי אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>