force-app/main/default/objects/Occupation__c/fields/LookupToLamasOccupationName__c.field-meta.xml
<CustomField>
    <fullName>LookupToLamasOccupationName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שם עיסוק בלמ&quot;ס</label>
    <referenceTo>OccupationLamas__c</referenceTo>
    <relationshipLabel>עיסוקים</relationshipLabel>
    <relationshipName>Occupations</relationshipName>
    <type>Lookup</type>
</CustomField>