force-app/main/default/objects/Occupation__c/fields/LookupToMainOccupation__c.field-meta.xml
<CustomField>
    <fullName>LookupToMainOccupation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לעיסוק ראשי</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Occupation__c.IsAlternativeOccupation__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Occupation__c</referenceTo>
    <relationshipLabel>עיסוקים אלטרנטיבים</relationshipLabel>
    <relationshipName>Occupations</relationshipName>
    <type>Lookup</type>
</CustomField>