force-app/main/default/objects/Occupation__c/fields/Matrix_code__c.field-meta.xml
<CustomField>
    <fullName>Matrix_code__c</fullName>
    <formula>value( OccupationMatrixId__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Matrix קוד</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>