force-app/main/default/objects/Occupation__c/fields/OccupationActive__c.field-meta.xml
<CustomField>
    <fullName>OccupationActive__c</fullName>
    <defaultValue>true</defaultValue>
    <label>פעיל</label>
    <type>Checkbox</type>
</CustomField>