force-app/main/default/objects/Occupation__c/fields/OccupationArabicMaleName__c.field-meta.xml
<CustomField>
    <fullName>OccupationArabicMaleName__c</fullName>
    <label>שם בערבית לשון זכר</label>
    <length>100</length>
    <type>Text</type>
</CustomField>