force-app/main/default/objects/Occupation__c/fields/OccupationDescription__c.field-meta.xml
<CustomField>
    <fullName>OccupationDescription__c</fullName>
    <label>תיאור העיסוק</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>