force-app/main/default/objects/Occupation__c/fields/OccupationDescriptionArabic__c.field-meta.xml
<CustomField>
    <fullName>OccupationDescriptionArabic__c</fullName>
    <label>תיאור קצר בערבית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>