force-app/main/default/objects/Occupation__c/fields/OccupationDescriptionEnglish__c.field-meta.xml
<CustomField>
    <fullName>OccupationDescriptionEnglish__c</fullName>
    <label>תיאור קצר אנגלית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>