force-app/main/default/objects/Occupation__c/fields/OccupationDescriptionRussian__c.field-meta.xml
<CustomField>
    <fullName>OccupationDescriptionRussian__c</fullName>
    <label>תיאור קצר רוסית</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>