force-app/main/default/objects/Occupation__c/fields/OccupationEnglishMaleName__c.field-meta.xml
<CustomField>
    <fullName>OccupationEnglishMaleName__c</fullName>
    <label>שם עיסוק זכר אנגלית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>