force-app/main/default/objects/Occupation__c/fields/OccupationEnglishName__c.field-meta.xml
<CustomField>
    <fullName>OccupationEnglishName__c</fullName>
    <label>שם באנגלית</label>
    <length>100</length>
    <type>Text</type>
</CustomField>