force-app/main/default/objects/Occupation__c/fields/OccupationFemaleName__c.field-meta.xml
<CustomField>
    <fullName>OccupationFemaleName__c</fullName>
    <label>שם עיסוק לשון נקבה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>