force-app/main/default/objects/Occupation__c/fields/OccupationFieldConnectionFour__c.field-meta.xml
<CustomField>
    <fullName>OccupationFieldConnectionFour__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לתחום 4</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>עיסוקים (שיוך לתחום 4)</relationshipLabel>
    <relationshipName>Occupations4</relationshipName>
    <type>Lookup</type>
</CustomField>