force-app/main/default/objects/Occupation__c/fields/OccupationFieldConnectionOne__c.field-meta.xml
<CustomField>
    <fullName>OccupationFieldConnectionOne__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לתחום 1</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>עיסוקים (שיוך לתחום 1)</relationshipLabel>
    <relationshipName>Occupations1</relationshipName>
    <type>Lookup</type>
</CustomField>