force-app/main/default/objects/Occupation__c/fields/OccupationFieldConnectionThree__c.field-meta.xml
<CustomField>
    <fullName>OccupationFieldConnectionThree__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לתחום 3</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>עיסוקים (שיוך לתחום 3)</relationshipLabel>
    <relationshipName>Occupations3</relationshipName>
    <type>Lookup</type>
</CustomField>