force-app/main/default/objects/Occupation__c/fields/OccupationFieldConnectionTwo__c.field-meta.xml
<CustomField>
    <fullName>OccupationFieldConnectionTwo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך לתחום 2</label>
    <referenceTo>Field__c</referenceTo>
    <relationshipLabel>עיסוקים (שיוך לתחום 2)</relationshipLabel>
    <relationshipName>Occupations2</relationshipName>
    <type>Lookup</type>
</CustomField>