force-app/main/default/objects/Occupation__c/fields/OccupationGroupIscoConnection__c.field-meta.xml
<CustomField>
    <fullName>OccupationGroupIscoConnection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>שיוך למשלח יד</label>
    <referenceTo>OccupationGroup__c</referenceTo>
    <relationshipLabel>עיסוקים</relationshipLabel>
    <relationshipName>Occupations</relationshipName>
    <type>Lookup</type>
</CustomField>