force-app/main/default/objects/Occupation__c/fields/OccupationId__c.field-meta.xml
<CustomField>
    <fullName>OccupationId__c</fullName>
    <label>קוד עיסוק</label>
    <length>10</length>
    <type>Text</type>
</CustomField>