force-app/main/default/objects/Occupation__c/fields/OccupationOriginName__c.field-meta.xml
<CustomField>
    <fullName>OccupationOriginName__c</fullName>
    <label>מקור השם</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>למ&quot;ס</fullName>
            </value>
            <value>
                <fullName>מודעות</fullName>
            </value>
            <value>
                <fullName>הכשרות</fullName>
            </value>
            <value>
                <fullName>צוות עבודאטה</fullName>
            </value>
            <value>
                <fullName>אחר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>