force-app/main/default/objects/Occupation__c/fields/OccupationRetrainExtCode__c.field-meta.xml
<CustomField>
    <fullName>OccupationRetrainExtCode__c</fullName>
    <label>קוד RETRAIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>