force-app/main/default/objects/Occupation__c/fields/OccupationRussianFemaleName__c.field-meta.xml
<CustomField>
    <fullName>OccupationRussianFemaleName__c</fullName>
    <label>שם עיסוק נקבה רוסית</label>
    <length>255</length>
    <type>Text</type>
</CustomField>