force-app/main/default/objects/Occupation__c/fields/OccupationSFId__c.field-meta.xml
<CustomField>
    <fullName>OccupationSFId__c</fullName>
    <displayFormat>OC-{000000000}</displayFormat>
    <label>מספר מזהה</label>
    <type>AutoNumber</type>
</CustomField>