force-app/main/default/objects/Occupation__c/fields/OccupationStatus__c.field-meta.xml
<CustomField>
    <fullName>OccupationStatus__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>טיוטה</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>