force-app/main/default/objects/Occupation__c/fields/Programs__c.field-meta.xml
<CustomField>
    <fullName>Programs__c</fullName>
    <label>שיוך לתוכניות</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>הכשרה בעבודה</fullName>
            </value>
            <value>
                <fullName>איתור וגיוס עובדים</fullName>
            </value>
            <value>
                <fullName>מסלול ירוק מעסיקים</fullName>
            </value>
            <value>
                <fullName>סטארטר</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>