force-app/main/default/objects/Occupation__c/fields/SFParentId__c.field-meta.xml
<CustomField>
    <fullName>SFParentId__c</fullName>
    <formula>LookupToMainOccupation__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>קוד סיילספורס של עיסוק ראשי</label>
    <type>Text</type>
</CustomField>