force-app/main/default/objects/Occupation__c/validationRules/MainAndAltInSameOccGroup.validationRule-meta.xml
<ValidationRule>
    <fullName>MainAndAltInSameOccGroup</fullName>
    <active>true</active>
    <description>וידוא כי העיסוק האלטרנטיבי והעיסוק הראשי תחת אותו משלח היד</description>
    <errorConditionFormula>IsAlternativeOccupation__c =TRUE &amp;&amp;
OccupationGroupIscoConnection__c  &lt;&gt;  LookupToMainOccupation__r.OccupationGroupIscoConnection__c &amp;&amp;
 LookupToMainOccupation__c  &lt;&gt; NULL</errorConditionFormula>
    <errorDisplayField>LookupToMainOccupation__c</errorDisplayField>
    <errorMessage>משלחי היד שונים בין העיסוק הראשי לעיסוק זה</errorMessage>
</ValidationRule>