force-app/main/default/objects/Occupation__c/validationRules/Only_if_lamas_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_if_lamas_selected</fullName>
    <active>true</active>
    <description>וידוא שרק במידה והוזן בשדה מקור השם &quot;למס&quot; אז יש את האופציה לבחור שם עיסוק בלמ&quot;ס.</description>
    <errorConditionFormula>not(or(ISPICKVAL( OccupationOriginName__c ,&apos;למ&quot;ס&apos;), (ISBLANK( LookupToLamasOccupationName__c ))))</errorConditionFormula>
    <errorDisplayField>LookupToLamasOccupationName__c</errorDisplayField>
    <errorMessage>יש לבחור בשדה מקור השם למ&quot;ס על מנת לשייך עיסוק למ&quot;ס.</errorMessage>
</ValidationRule>