force-app/main/default/objects/Occupation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>IsAlternativeOccupation__c</columns>
    <columns>OccupationGroupIscoConnection__c</columns>
    <columns>EscoCode__c</columns>
    <columns>OnetCode__c</columns>
    <columns>OccupationFieldConnectionOne__c</columns>
    <columns>DescriptionOrigin__c</columns>
    <columns>Matrix_code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OccupationActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>