force-app/main/default/objects/Occupation__c/listViews/Alterv.listView-meta.xml
<ListView>
    <fullName>Alterv</fullName>
    <columns>NAME</columns>
    <columns>OccupationFemaleName__c</columns>
    <columns>IsAlternativeOccupation__c</columns>
    <columns>LookupToMainOccupation__c</columns>
    <columns>OccupationStatus__c</columns>
    <columns>EscoCode__c</columns>
    <columns>OccupationMatrixId__c</columns>
    <columns>OnetCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsAlternativeOccupation__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>עיסוקים אלטרנטיביים בלבד</label>
</ListView>