force-app/main/default/objects/Occupation__c/listViews/withoutdesc.listView-meta.xml
<ListView>
    <fullName>withoutdesc</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>עיסוקים ללא תיאור</label>
</ListView>